--- a/portal-pipeline/pipeline-runs/portal-run.html
+++ b/portal-pipeline/pipeline-runs/portal-run.html
@@ -21,3 +21,55 @@
     <section class="main-content">      
     <h2><b>Litmus-Portal Nightly Build Details</b></h2>
     <p>Here are the details of latest few pipeline runs for Litmus-Portal tests!</p>  
+<table>
+ <tr>
+  <th>Pipeline ID</th>
+  <th>Execution Time</th>
+  <th>Version</th>
+ <th>Coverage</th>
+ <tr>
+  <td><a href= "https://gitlab.mayadata.io/litmuschaos/litmus-e2e/pipelines/13563">13563</a></td>
+  <td>Wed Mar 31 00:01:27 2021(IST)</td>
+  <td>ci</td>
+<td><a href="https://bit.ly/2OLie8t"><img alt=60% src="https://progress-bar.dev/60" /></a></td> </tr>
+
+ <tr>
+  <td><a href= "https://gitlab.mayadata.io/litmuschaos/litmus-e2e/pipelines/13561">13561</a></td>
+  <td>Tue Mar 30 00:00:37 2021(IST)</td>
+  <td>ci</td>
+<td><a href="https://bit.ly/2OLie8t"><img alt=60% src="https://progress-bar.dev/60" /></a></td> </tr>
+
+ <tr>
+  <td><a href= "https://gitlab.mayadata.io/litmuschaos/litmus-e2e/pipelines/13559">13559</a></td>
+  <td>Mon Mar 29 00:02:08 2021(IST)</td>
+  <td>ci</td>
+<td><a href="https://bit.ly/2OLie8t"><img alt=60% src="https://progress-bar.dev/60" /></a></td> </tr>
+
+ <tr>
+  <td><a href= "https://gitlab.mayadata.io/litmuschaos/litmus-e2e/pipelines/13555">13555</a></td>
+  <td>Sat Mar 27 00:00:58 2021(IST)</td>
+  <td>ci</td>
+<td><a href="https://bit.ly/2OLie8t"><img alt=60% src="https://progress-bar.dev/60" /></a></td> </tr>
+
+ </tr>
+ <tr>
+  <td><a href= "https://gitlab.mayadata.io/litmuschaos/litmus-e2e/pipelines/13549">13549</a></td>
+  <td>Thu Mar 25 06:20:37 2021(IST)</td>
+  <td>ci</td>
+ <td><a href="https://bit.ly/2OLie8t"><img alt=60% src="https://progress-bar.dev/60" /></a></td>
+ </tr>
+</table>
+<table>
+ <tr>
+  <th>Pipeline ID</th>
+  <th>Execution Time</th>
+  <th>Version</th>
+ <th>Coverage</th>
+ </tr>
+ <tr>
+  <td><a href= "https://gitlab.mayadata.io/litmuschaos/litmus-e2e/pipelines/13557">13557</a></td>
+  <td>Sun Mar 28 00:00:10 2021(IST)</td>
+  <td>ci</td>
+ <td><a href="https://bit.ly/2OLie8t"><img alt=60% src="https://progress-bar.dev/60" /></a></td>
+ </tr>
+</table>
