--- a/generic-pipeline/pipeline-runs/pod-level-run.html
+++ b/generic-pipeline/pipeline-runs/pod-level-run.html
@@ -93,6 +93,12 @@
   <th>Execution Time</th>
   <th>Version</th>
  <th>Coverage</th>
+ <tr>
+  <td><a href= "https://gitlab.mayadata.io/litmuschaos/litmus-e2e/pipelines/1223">1223</a></td>
+  <td>uii</td>
+  <td>ci</td>
+<td><a href="https://bit.ly/2OLie8t"><img alt=70% src="https://progress-bar.dev/70" /></a></td> </tr>
+
  </tr>
  <tr>
   <td><a href= "https://gitlab.mayadata.io/litmuschaos/litmus-e2e/pipelines/1223">1223</a></td>
