new pipeline result updated

--- a/generic-pipeline/pipeline-runs/node-level-run.html
+++ b/generic-pipeline/pipeline-runs/node-level-run.html
@@ -112,3 +112,17 @@
   <td>ci</td>
  </tr>
 </table>
+<table>
+ <tr>
+  <th>Pipeline ID</th>
+  <th>Execution Time</th>
+  <th>Version</th>
+ <th>Coverage</th>
+ </tr>
+ <tr>
+  <td><a href= "https://gitlab.mayadata.io/litmuschaos/litmus-e2e/pipelines/1223">1223</a></td>
+  <td>uii</td>
+  <td>ci</td>
+ <td><a href="https://bit.ly/2OLie8t"><img alt=70% src="https://progress-bar.dev/70" /></a></td>
+ </tr>
+</table>
